tdf#129596 Distinguish between integer and long while loading immediate values

During the generation of CONST_ expressions, distinguish between
integer and long and load the correct value in the immediate load step.

Change-Id: Ib4eb65d7fae3163043899ad8234816b1ebd7316b