basic/qa/vba_tests/typename.vb
@@ -61,6 +61,12 @@ Function verify_testTypeName() As String
     date1 = TypeName(l1)
     TestLog_ASSERT date1 = date2, "the return TypeName is: " & date1
 
+    ' tdf#129596 - Types of constant values
+    TestLog_ASSERT TypeName(32767) = "Integer", "the return TypeName(32767) is: " & TypeName(32767)
+    TestLog_ASSERT TypeName(-32767) = "Integer", "the return TypeName(-32767) is: " & TypeName(-32767)
+    TestLog_ASSERT TypeName(1048575) = "Long", "the return TypeName(1048575) is: " & TypeName(1048575)
+    TestLog_ASSERT TypeName(-1048575) = "Long", "the return TypeName(-1048575) is: " & TypeName(-1048575)
+
     result = result & Chr$(10) & "Tests passed: " & passCount & Chr$(10) & "Tests failed: " & failCount & Chr$(10)
     verify_testTypeName = result
 
